--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,11 +6,11 @@
 
   <title>Degrees of separation between Steam users</title>
 
-  <link rel="icon" type="image/png" href="/favicon.png">
-  <link rel="stylesheet" href="/global.css">
-  <link rel="stylesheet" href="/build/bundle.css">
+  <link rel="icon" type="image/png" href="./favicon.png">
+  <link rel="stylesheet" href="./global.css">
+  <link rel="stylesheet" href="./build/bundle.css">
 
-  <script defer src="/build/bundle.js"></script>
+  <script defer src="./build/bundle.js"></script>
 </head>
 
 <body>
